--- a/kg_neo4j/pom.xml
+++ b/kg_neo4j/pom.xml
@@ -27,5 +27,24 @@
 	    <artifactId>neo4j-kernel</artifactId>
 	    <version>3.3.0</version>
 	</dependency>
+
+    <dependency>
+      <groupId>org.neo4j.driver</groupId>
+      <artifactId>neo4j-java-driver</artifactId>
+      <version>1.4.4</version>
+    </dependency>
   </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
