--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 
         <dependency>
             <groupId>org.neo4j</groupId>
-            <artifactId>neo4j-kernel</artifactId>
+            <artifactId>neo4j</artifactId>
             <version>3.3.0</version>
         </dependency>
 
