--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
             <artifactId>neo4j-java-driver</artifactId>
             <version>1.4.4</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-neo4j -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-neo4j</artifactId>
+            <version>5.0.2.RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
