--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,14 @@
             <version>3.4</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/de.roskenet/springboot-javafx-support -->
+        <dependency>
+            <groupId>de.roskenet</groupId>
+            <artifactId>springboot-javafx-support</artifactId>
+            <version>2.1.5</version>
+        </dependency>
+
+
         <!-- https://mvnrepository.com/artifact/org.neo4j/neo4j -->
         <!--<dependency>-->
             <!--<groupId>org.neo4j</groupId>-->
